Add logical properties demo

--- a/custom-properties.html
+++ b/custom-properties.html
@@ -28,8 +28,8 @@
     // This makes it possible e.g. to animate custom properties
 
     // Support
-    // - Available in Chrome behind the "Experimental Web Platform features" flag
-    // - Available in Safari behind the "Enperimental features" flag
+    // - Available in Chrome behind the "Experimental Web Platform features" flag (chrome://flags/)
+    // - Available in Safari behind the "Experimental features" flag, but this example doesn't work
     // - In development in Firefox
 
     // More info:
