--- a/subgrid.html
+++ b/subgrid.html
@@ -1,7 +1,7 @@
 <style>
     body {
         background: #ddd;
-        font-family: -apple-system, sans-serif;
+        font-family: Lato, sans-serif;
     }
 
     .grid {
