Bug fix and refactoring

--- a/paint-api.html
+++ b/paint-api.html
@@ -11,7 +11,7 @@
         height: 20rem;
         -webkit-mask-image: paint(scoop-border);
         mask-image: paint(scoop-border);
-        --scoop-border-radius: 5rem;
+        --scoop-border-radius: 4em;
     }
 </style>
 
