--- a/subgrid.html
+++ b/subgrid.html
@@ -1,3 +1,19 @@
+<title>Subgrid</title>
+
+<!--
+    - Child elements can use grid of parent element
+
+    Support
+    - Available in Firefox nightly (v69)
+    - Not available in any other browser
+
+    More info:
+    https://caniuse.com/#feat=css-subgrid
+    https://www.smashingmagazine.com/2018/07/css-grid-2/
+    https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Subgrid
+    https://www.w3.org/TR/css-grid-2/
+-->
+
 <style>
     body {
         background: #ddd;
@@ -63,18 +79,3 @@
             suscipit semper.</div>
     </div>
 </div>
-
-<script>
-    // CSS Grid Layout Module Level 2 (CSS Subgrid)
-
-    // Support
-    // - Available in Firefox nightly (v69)
-    // - Not available in any other browser
-
-    // More info:
-    // https://caniuse.com/#feat=css-subgrid
-    // https://www.smashingmagazine.com/2018/07/css-grid-2/
-    // https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Subgrid
-    // https://www.w3.org/TR/css-grid-2/
-
-</script>
