--- a/index.html
+++ b/index.html
@@ -2,17 +2,26 @@
 
 <style>
     body {
-        font-family: Lato, sans-serif;
+        font-family: 'Lato', sans-serif;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         font-size: 2.5em;
+        background-image: url(images/bg.jpg);
+        background-size: cover;
+        background-position: 0 60%;
+        color: white;
+    }
+
+    h1 {
+        font-family: 'Industry Inc', sans-serif;
+        font-weight: 400;
     }
 
     a {
         text-decoration: none;
-        color: deeppink;
+        color: lightpink;
     }
 
     a:hover {
