Update body heights

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         background-size: cover;
         background-position: 0 60%;
         color: white;
+        height: 100%;
+        margin: 0;
     }
 
     h1 {
