--- a/variable-fonts.html
+++ b/variable-fonts.html
@@ -43,6 +43,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        height: 100%;
+        margin: 0;
     }
 
     .font {
@@ -70,4 +72,4 @@
     }
 </style>
 
-<div class="font">Variable fonts are <i>very</i> nice.</div>
+<div class="font">Variable fonts are <i>nice</i>.</div>
