--- a/properties-values.html
+++ b/properties-values.html
@@ -20,6 +20,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        height: 100%;
+        margin: 0;
     }
 
     .foo {
